--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <img src="images/Frame.png" alt="logo">
             <h2><span class="logo-title">G</span>amer</h2>
         </div>
-        <nav>
+        <nav class="header-nav">
             <ul>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Developers</a></li>
@@ -83,7 +83,7 @@
                 <p class="play-instant-des">Play games online for free without <br> downloading.Just click the Play button and play instantly in your browser</p>
             </div>
             <div class="play-instantly-img">
-                <img src="images/Rectangle 55.png" alt="">
+                <img class="rectangle-img-55" src="images/Rectangle 55.png" alt="">
                 <img class="rectangle-img-66" src="images/Rectangle 66.png" alt="">
             </div>
         </section>
